use stylesheet instead of inline styles

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 	<head>
 		<title>Test Page</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<h3>Hello</h3>
 		<p>This is a test paragraph.</p>
-		<div style="width: 200px; height: 200px; background-color: blue"></div>
+		<div class="blue-rect"></div>
 	</body>
 </html>
