python script to pull out all tags, classes, and IDs from html file

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!doctype html>
 <html>
 	<head>
 		<title>Test Page</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<h3>Hello</h3>
+		<h3 id="title_text">Hello</h3>
 		<p>This is a test paragraph.</p>
 		<div class="blue-rect"></div>
 	</body>
